<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.wowstoreapp.wowstore.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/wowstore"
        android:contentDescription="@string/logoWow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benvenuto"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/menuMain"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/info"
            android:id="@+id/buttonINFO"
            android:background="@drawable/button_selector"
            android:textColor="#ffffff"
            android:layout_below="@+id/buttonSV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/sorv"
            android:id="@+id/buttonSV"
            android:background="@drawable/button_selector"
            android:textColor="#ffffff"
            android:layout_below="@+id/buttonAT"
            android:layout_alignLeft="@+id/buttonINFO"
            android:layout_alignStart="@+id/buttonINFO"
            android:layout_marginTop="10dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/atv"
            android:id="@+id/buttonAT"
            android:background="@drawable/button_selector"
            android:textColor="#ffffff"
            android:layout_below="@+id/spaceCenter"
            android:layout_alignLeft="@+id/buttonSV"
            android:layout_alignStart="@+id/buttonSV"
            android:layout_marginTop="5dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/awear"
            android:id="@+id/buttonAW"
            android:background="@drawable/button_selector"
            android:textColor="#ffffff"
            android:layout_alignBottom="@+id/spaceCenter"
            android:layout_alignLeft="@+id/buttonAT"
            android:layout_alignStart="@+id/buttonAT"
            android:layout_marginBottom="5dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/tablet"
            android:id="@+id/buttonTB"
            android:background="@drawable/button_selector"
            android:textColor="#ffffff"
            android:layout_above="@+id/buttonAW"
            android:layout_alignLeft="@+id/buttonAW"
            android:layout_alignStart="@+id/buttonAW"
            android:layout_marginBottom="10dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/smartphone"
            android:id="@+id/buttonSP"
            android:background="@drawable/button_selector"
            android:textColor="#ffffff"
            android:layout_above="@+id/buttonTB"
            android:layout_alignLeft="@+id/buttonTB"
            android:layout_alignStart="@+id/buttonTB"
            android:layout_marginBottom="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:id="@+id/spaceCenter"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</RelativeLayout>
