<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewNeg"
        android:scrollbars="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">



        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:id="@+id/imageViewLogoPV"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/wowstore"
                android:contentDescription="@string/logoWow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indSedeTV"
                android:id="@+id/indirizzoTV"
                android:gravity="center"
                android:layout_below="@+id/imageViewLogoPV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:autoLink="phone|map"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/imageViewMapTV"
                android:src="@drawable/mapwowtv"
                android:layout_below="@+id/indirizzoTV"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indSedePD"
                android:id="@+id/indirizzoPD"
                android:gravity="center"
                android:layout_below="@+id/imageViewMapTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:autoLink="phone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/imageViewMapPD"
                android:src="@drawable/mapwowpd"
                android:layout_below="@+id/indirizzoPD"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indSedeVI"
                android:id="@+id/indirizzoVI"
                android:gravity="center"
                android:layout_below="@+id/imageViewMapPD"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:autoLink="phone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/imageViewMapVI"
                android:src="@drawable/mapwowvi"
                android:layout_below="@+id/indirizzoVI"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        </ScrollView>
</RelativeLayout>